test/Fail/CyclicModuleDependency3.agda
module CyclicModuleDependency3 where

import CyclicModuleDependency1
